# recovery-dharma-log

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  run-backend.sh  run-frontend.sh
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/agents/: chief-architect.md  dependency-checker.md  documentation.md  performance.md  quality-reviewer.md  refactorer.md  security-auditor.md  test-generator.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  code-review.yml  codeql.yml  security.yml
backend/: README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.claude-flow/data/: pending-insights.jsonl
backend/app/: __init__.py  auth.py  config.py  database.py  entrypoint.py  main.py  models.py  schemas.py  seed.py  services.py
backend/app/routers/: __init__.py  activity.py  auth.py  book.py  export.py  meetings.py  overrides.py  settings.py  setup.py  speakers.py  topics.py
backend/rd_log_python/: __init__.py  main.py
backend/scripts/: analyze_mutations.py  complexity.sh  coverage.sh  format.sh  lint.sh  mutation.sh  security.sh  test.sh  typecheck.sh
backend/tests/: __init__.py  conftest.py  test_activity.py  test_api.py  test_deployment.py  test_entrypoint.py  test_main.py  test_services.py
frontend/: .eslintrc.js  .prettierignore  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
frontend/.claude-flow/data/: pending-insights.jsonl
frontend/scripts/: format.sh  lint.sh  test.sh
frontend/src/: App.tsx  index.ts  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: ErrorWithRetry.tsx  RotationCalendar.tsx  Skeleton.tsx  Toast.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useAuth.ts  useDirtyState.ts  useLogFilters.ts  useToast.ts
frontend/src/pages/: Landing.tsx  Log.tsx  Login.tsx  Settings.tsx  Setup.tsx
frontend/src/styles/: rd-theme.css
frontend/src/types/: index.ts
frontend/src/utils/: dates.ts  reading.ts  rotation.ts
frontend/tests/: App.test.tsx  ErrorWithRetry.test.tsx  Landing.test.tsx  Log.test.tsx  Login.test.tsx  NavLink.test.tsx  RotationCalendar.test.tsx  Settings.test.tsx  Setup.test.tsx  Skeleton.test.tsx  Toast.test.tsx  api.test.ts  dates.test.ts  index.test.ts  polyfills.ts  reading.test.ts  rotation.test.ts  useAuth.test.ts  useDirtyState.test.ts  useToast.test.ts
plan/: 2026-02-23_BACKLOG_GROOMING.md  2026-02-24_BACKLOG_GROOMING.md  2026-02-25_BACKLOG_GROOMING.md
plans/: 2026-02-20-feature-reimagining.md  2026-02-27_BACKLOG_PROGRESS.md  RCA_ISSUE_84.md  RCA_RAILWAY_HEALTHCHECK.md  recovery-dharma-secretary-log-prompt.md
plans/architecture/: README.md  run-check.sh
plans/git-issues/security-review/: 00-executive-summary.md  01-critical-hardcoded-dev-secret-fallback.md  README.md  (+23 more)
plans/github-issues/: ISSUE_86_railway-readiness.md  ISSUE_add-topic-css-overflow.md  ISSUE_attendance-to-dana.md  ISSUE_book-division-ux.md  ISSUE_login-broken-after-signout.md  ISSUE_rotation-position-labels.md  ISSUE_rotation-position-limit.md
scripts/: check-all.sh  pr-status.sh
(+4 files in other folders)
